# indicator_machinlearning

./: .env  .gitignore  README.md  dashboard.py  dashboard_shared.py  file_list.txt  integration_smoke_test.py  main.py  pyproject.toml  requirements.txt  run_dashboard.bat  run_web.bat  run_web.py  test_evolution.py  test_output.txt  test_v.txt
.streamlit/: config.toml
data/: features.json
docs/: SYSTEM_ANALYSIS_REPORT.md  V11_DESIGN_IMPLEMENTATION.md  config_boundaries.md  diagnosis_fix_history_v1_4.md  phase3_rl_ml_upgrade_plan.md  system_upgrade_plan.md  upgrade_roadmap_phase1_3.md
ledger/: experiments.jsonl  q_table.json  q_table_risk.json
pages/: 01_Strategy_Analysis.py  02_Feature_Universe.py
scripts/: smoke_test.py  test_system_mode.py
src/: config.py  contracts.py
test_ledger/: experiments.jsonl
tests/: integration_test.py  test_ci_contracts.py  test_column_resolver.py  test_logic_tree_v18.py  test_tv_calibration.py  test_v12_3_upgrades.py  test_v13_5_upgrade.py  test_v13_pro_core.py
tools/: crawler.py  export_assistant.py  fix_deprecated_fillna.py  fix_indicators.py  fix_registry_errors.py  generate_data.py  observability_summary.py  populate_features_extended.py  populate_features_v2.py  rebuild_registry.py  register_context_features.py  reset_system.py  run_eval_harness.py  run_stage_transition_harness.py  run_tv_calibration.py  sa_rag_demo.py  test_all_indicators.py  test_integrated_rl.py  validate_and_fix_indicators.py
web/: analysis.html  app.js  backtest.html  detail.html  features.html  history.html  index.html  style.css
(+520 files in other folders)
